# networkx-presentation

./: CLAUDE.md  README.md  event_processing.py  nx.py  pyproject.toml  scenarios.numbers
scenarios/: aggregated.tsv  event_types.tsv  ideal_event_log.tsv  real_event_log.tsv
